--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav data-aos="fade-down" data-aos-once="false" data-aos-duration="1500"data-aos-delay="1500" class="navbar navbar-expand-lg shadow">
         <div class="container">
-            <img src="Images/logo.png" alt="" class="logo">
+            <img src="./Images/Logo.png" alt="" class="logo">
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsmallscreen"
                 aria-controls="navbarsmallscreen" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="images/ME.png" alt="" data-aos="zoom-in" data-aos-once="false" data-aos-duration="2000"data-aos-delay="1200" class="profile my-5 rounded-circle w-50">
+                    <img src="./Images/ME.png" alt="" data-aos="zoom-in" data-aos-once="false" data-aos-duration="2000"data-aos-delay="1200" class="profile my-5 rounded-circle w-50">
         
                 </div>
             </div>
