--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav data-aos="fade-down" data-aos-once="false" data-aos-duration="1500"data-aos-delay="1500" class="navbar navbar-expand-lg shadow">
+    <nav data-aos="fade-down" data-aos-once="false" data-aos-duration="1300"data-aos-delay="1000" class="navbar navbar-expand-lg shadow">
         <div class="container">
             <img src="./Images/Logo.png" alt="" class="logo">
             
@@ -45,18 +45,18 @@
             <div class="row vh-100 align-items-lg-center">
                 <div class="col-md-6 text-center text-md-start">
                     <h3 data-aos="fade-right" data-aos-once="false" data-aos-duration="500"data-aos-delay="100" class="fs-4 m-0 lead">Hey, I'm</h3>
-                    <h1 data-aos="fade-down" data-aos-once="false" data-aos-duration="1500"data-aos-delay="1500" class="name-font display-5 m-0">Mark Joemarie<span class="wave">👋</span></h1>
-                    <h3 data-aos="zoom-in" data-aos-once="false" data-aos-duration="1800"data-aos-delay="1000" class="typing m-0">I'm a <span class="typed"></span></h3>
-                    <p data-aos="fade-right" data-aos-once="false" data-aos-duration="1300"data-aos-delay="1000" class="mt-4 lead">Hello, I’m currently a Third year <span class="it">Information Technology</span> student pursuing a career as a Front-End Developer. <br>
+                    <h1 data-aos="fade-down" data-aos-once="false" data-aos-duration="800"data-aos-delay="600" class="name-font display-5 m-0">Mark Joemarie<span class="wave">👋</span></h1>
+                    <h3 data-aos="slide-right" data-aos-once="false" data-aos-duration="1200"data-aos-delay="800" class="typing m-0">I'm a <span class="typed"></span></h3>
+                    <p data-aos="fade-right" data-aos-once="false" data-aos-duration="1800"data-aos-delay="2000" class="mt-4 lead">Hello, I’m currently a Third year <span class="it">Information Technology</span> student pursuing a career as a Front-End Developer. <br>
                     I am eager to apply my knowledge to real-world projects, continuously improve my skills, and contribute to building innovative web solutions that enhance user experience.</p>
-                    <p data-aos="zoom-in" data-aos-once="false" data-aos-duration="1300"data-aos-delay="1000" class="d-flex align-items-center justify-content-center justify-content-lg-start">Follow me on:
-                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2000"data-aos-delay="1900" class="text-decoration-none"><i class="icon-style bi bi-facebook"></i></a>
-                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2000"data-aos-delay="2300" class="text-decoration-none"><i class="icon-style bi bi-instagram"></i></a>
-                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2000"data-aos-delay="2800" class="text-decoration-none"><i class="icon-style bi bi-github"></i></a>
+                    <p data-aos="slide-right" data-aos-once="false" data-aos-duration="600"data-aos-delay="2000" class="d-flex align-items-center justify-content-center justify-content-lg-start">Follow me on:
+                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2300"data-aos-delay="2400" class="text-decoration-none"><i class="icon-style bi bi-facebook"></i></a>
+                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2600"data-aos-delay="2800" class="text-decoration-none"><i class="icon-style bi bi-instagram"></i></a>
+                        <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2800"data-aos-delay="3000" class="text-decoration-none"><i class="icon-style bi bi-github"></i></a>
                     </p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="./Images/ME.png" alt="" data-aos="zoom-in" data-aos-once="false" data-aos-duration="2000"data-aos-delay="1200" class="profile my-5 rounded-circle w-50">
+                    <img src="./Images/ME.png" alt="" data-aos="fade-down" data-aos-once="false" data-aos-duration="2000" data-aos-delay="1200" class="profile my-5 rounded-circle">
         
                 </div>
             </div>
