--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </nav>
 
-    <section class="bg-light pt-5 pt-lg-0">
+    <section class="pt-5 pt-lg-0">
         <div class="container">
             <div class="row vh-100 align-items-lg-center">
                 <div class="col-md-6 text-center text-md-start">
