--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h3 data-aos="fade-right" data-aos-once="false" data-aos-duration="500"data-aos-delay="100" class="fs-4 m-0 lead">Hey, I'm</h3>
                     <h1 data-aos="fade-down" data-aos-once="false" data-aos-duration="800"data-aos-delay="600" class="name-font display-5 m-0">Mark Joemarie<span class="wave">👋</span></h1>
                     <h3 data-aos="slide-right" data-aos-once="false" data-aos-duration="1200"data-aos-delay="800" class="typing m-0">I'm a <span class="typed"></span></h3>
-                    <p data-aos="fade-right" data-aos-once="false" data-aos-duration="1800"data-aos-delay="2000" class="mt-4 lead">Hello, I’m currently a Third year <span class="it">Information Technology</span> student pursuing a career as a Front-End Developer. <br>
+                    <p data-aos="fade-right" data-aos-once="false" data-aos-duration="1800"data-aos-delay="2000" class="mt-4 lead">Hello, I’m currently a Third year <span class="it">Information Technology</span> student at the Urdaneta City University (UCU), pursuing a career as a Front-End Developer. <br>
                     I am eager to apply my knowledge to real-world projects, continuously improve my skills, and contribute to building innovative web solutions that enhance user experience.</p>
                     <p data-aos="slide-right" data-aos-once="false" data-aos-duration="600"data-aos-delay="2000" class="d-flex align-items-center justify-content-center justify-content-lg-start">Follow me on:
                         <a href="" data-aos="zoom-out" data-aos-once="false" data-aos-duration="2300"data-aos-delay="2400" class="text-decoration-none"><i class="icon-style bi bi-facebook"></i></a>
